@startuml graphic

class GraphicEngine {
}


class Instance {
    - VkInstance
}
class DebugTool {
    - VkDebugUtilsMessengerEXT
}
class Surface {
    + VkSurfaceKHR
}
class GraphicDevice {
}


class PhysicalDevice {
    - VkPhysicalDevice
}
class LogicalDevice {
    - VkDevice
}
class SwapChain {
    + VkSwapchainKHR
}
class GraphicRender {

}
class QueueFamilies {

}


class BufferMemoryArea {

}
class DescriptorPool {
    + VkDescriptorPool
}
class CommandPool {
    + VkCommandPool
}
class TransientCommandPool {
    + VkCommandPool
}

class RenderPass {
    + VkRenderPass
}

class GraphicPipeline {
    + VkPipeline
    + VkPipelineLayout
}

class GraphicQueue {
    + VkQueue
}
class PresentQueue {
    + VkQueue
}

GraphicEngine o-- Instance
GraphicEngine o-- GraphicDevice
GraphicEngine o-- DebugTool
GraphicEngine o-- Surface

GraphicDevice o-- PhysicalDevice
GraphicDevice o-- LogicalDevice
GraphicDevice o-- QueueFamilies
GraphicDevice o-- GraphicRender
GraphicDevice o-- SwapChain
GraphicDevice o-- BufferMemoryArea

GraphicRender o-- RenderPass
GraphicRender o-- GraphicPipeline

BufferMemoryArea o-- DescriptorPool
BufferMemoryArea o-- CommandPool
BufferMemoryArea o-- TransientCommandPool

QueueFamilies o-- GraphicQueue
QueueFamilies o-- PresentQueue

@enduml